Issue #5391: mmap.read_byte() should return unsigned value [0, 255] instead of signed value [-127, 128].